@@ -4041,6 +4041,45 @@ class spell_gen_orc_disguise : public SpellScriptLoader
         }
 };
 
+enum WhisperGulchYoggSaronWhisper
+{
+    SPELL_YOGG_SARON_WHISPER_DUMMY = 29072
+};
+
+class spell_gen_whisper_gulch_yogg_saron_whisper : public SpellScriptLoader
+{
+    public:
+        spell_gen_whisper_gulch_yogg_saron_whisper() : SpellScriptLoader("spell_gen_whisper_gulch_yogg_saron_whisper") { }
+
+        class spell_gen_whisper_gulch_yogg_saron_whisper_AuraScript : public AuraScript
+        {
+            PrepareAuraScript(spell_gen_whisper_gulch_yogg_saron_whisper_AuraScript);
+
+            bool Validate(SpellInfo const* /*spellInfo*/)
+            {
+                if (!sSpellMgr->GetSpellInfo(SPELL_YOGG_SARON_WHISPER_DUMMY))
+                    return false;
+                return true;
+            }
+
+            void HandleEffectPeriodic(AuraEffect const* /*aurEff*/)
+            {
+                PreventDefaultAction();
+                GetTarget()->CastSpell((Unit*)NULL, SPELL_YOGG_SARON_WHISPER_DUMMY, true);
+            }
+
+            void Register()
+            {
+                OnEffectPeriodic += AuraEffectPeriodicFn(spell_gen_whisper_gulch_yogg_saron_whisper_AuraScript::HandleEffectPeriodic, EFFECT_0, SPELL_AURA_PERIODIC_DUMMY);
+            }
+        };
+
+        AuraScript* GetAuraScript() const
+        {
+            return new spell_gen_whisper_gulch_yogg_saron_whisper_AuraScript();
+        }
+};
+
 void AddSC_generic_spell_scripts()
 {
     new spell_gen_absorb0_hitlimit1();
@@ -4142,4 +4181,5 @@ void AddSC_generic_spell_scripts()
     new spell_gen_shadowmeld();
     new spell_item_sylvanas_music_box();
     new spell_gen_orc_disguise();
+    new spell_gen_whisper_gulch_yogg_saron_whisper();
 }
